# Code_PBL

./: Add_In_Out_patient_page.qml  Addnewmedicine_page.qml  Admin.cpp  Admin.h  Admin.txt  CMakeLists.txt  Changepassword_page.qml  Doctor.cpp  Doctor.h  Doctor.txt  Exel_PBL.xlsx  Forgotpassword_page.qml  In_patient.txt  Login_page.qml  Main.qml  Medicine.cpp  Medicine.h  Medicine.txt  Out_patient.txt  Patient.cpp  Patient.h  Person.cpp  Person.h  Side_bar.qml  ViewandEdit_Inpatient_page.qml  ViewandEdit_Outpatient_page.qml  ViewandEdit_page.qml  banthunghiem.cpp  main.cpp
